# curation-tools

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  start.sh
backend/: config.py  main.py
backend/converter/: router.py  service.py  validation_service.py
backend/core/: config.py  db.py
backend/datasets/: schemas.py
backend/models/: schemas.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: hf-auto-mount.service  hf_auto_mount.py  reset_db.py
tests/: conftest.py  create_mock_dataset.py  test_api_real.py  test_auto_grade_bands.py  test_auto_grade_service.py  test_cell_service.py  test_cell_service_db.py  test_cell_service_legacy_db.py  test_cells_api.py  test_config.py  test_conversion_router.py  test_conversion_service.py  test_converter_dockerfile.py  test_converter_mem_limit.py  test_converter_oom_status.py  test_converter_preflight_mcap.py  test_converter_robot_profiles.py  test_converter_router.py  test_converter_service.py  test_converter_stop.py  test_converter_validation_router.py  test_converter_validation_service.py  test_cycle_stamp_service.py  test_dataset_list.py  test_dataset_ops_engine.py  test_dataset_ops_router.py  test_dataset_ops_service.py  test_dataset_search.py  test_dataset_service_real.py  test_db.py  test_distribution_service.py  test_e2e.py  test_episode_annotations_db.py  test_episode_serials_sync.py  test_episode_service_real.py  test_fields_service.py  test_grade_reason.py  test_hf_sync_router.py  test_hf_sync_service.py  test_lazy_sync_mtime.py  (+9 more)
(+160 files in other folders)
