[project]
name = "curation-tools"
version = "0.1.0"
description = "Local curation tool for LeRobot datasets with Rerun visualization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyarrow>=17.0.0",
    "rerun-sdk>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
curation-server = "backend.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
