[project]
name = "curation-tools"
version = "0.1.0"
description = "Local curation tool for LeRobot datasets with Rerun visualization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyarrow>=17.0.0",
    "rerun-sdk>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
rerun = [
    "opencv-python>=4.8.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
curation-server = "backend.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end browser tests (require running servers)",
]
addopts = "-m 'not e2e'"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
